"Game -> Restart Game" resets the game timer now

BUG:144476

svn path=/trunk/KDE/kdegames/kshisen/; revision=875409